--- a/www/css/style.css
+++ b/www/css/style.css
@@ -3,6 +3,10 @@
   width: 120px;
 }
 #head{
-  border-bottom: 2px;
+  border-style: solid;
+  border-top:2px;
+  border-left:2px; 
+  border-right: 2px;
   border-color: black;
+  margin-bottom: 35px;
 }
