--- a/www/css/style.css
+++ b/www/css/style.css
@@ -10,3 +10,21 @@
   border-color: black;
   margin-bottom: 35px;
 }
+
+h4{
+  margin-top: 15px;
+}
+select{
+  width: 60%;
+  height: 40px;
+  font-size: 30px;
+}
+button{
+  margin-top: 20px;
+}
+input.form-control{
+  width: 100px;
+}
+.col-xs-6{
+  
+}
